# cad_gtm

./: CHANGELOG.md  Cargo.toml
crates/cgtm_geomerty/: Cargo.toml
crates/cgtm_geometry/: Cargo.toml
crates/cgtm_geometry/examples/: bspline_approximation.rs  bspline_clamp_derivate.rs  bspline_non_periodic.rs  bspline_periodic.rs
crates/cgtm_geometry/src/: curve.rs  lib.rs
crates/cgtm_geometry/src/curve/: bspline.rs
crates/cgtm_geometry/src/curve/bspline/: bspline_approximation.rs  bspline_data_knots.rs  bspline_error.rs  bspline_knots.rs  bspline_poles.rs  utils.rs
crates/cgtm_topology/: Cargo.toml
src/: lib.rs
