[package]
name = "cad_gtm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["geometry"]
geometry = ["cgtm_geometry"]
topology = ["cgtm_topology"]

[workspace]
members = [
    "crates/cgtm_geometry",
    "crates/cgtm_topology"
]

[dependencies]
cgtm_geometry = { path = "crates/cgtm_geometry", optional = true }
cgtm_topology = { path = "crates/cgtm_topology", optional = true }